--- a/thesis_tex_src/0_Prelim/abs.tex
+++ b/thesis_tex_src/0_Prelim/abs.tex
@@ -1,5 +1,5 @@
 % ABSTRACT
 
-Have you ever wondered why this is called an \emph{abstract}? Weird thing is
-that its legal to cite the abstract of a dissertation alone, apart from the
-rest of the manuscript.
+Quantum Computing offers a novel approach to processing new information using the principles of Quantum Mechanics. Quantum Computing allows us to run new types of algorithms at quick and efficient speeds which can lead to breakthroughs in cryptography, machine learning, or drug discovery. 
+
+Quantum Computing allows for the potential of running new types of algorithms and simulations at faster and efficient speeds than classical computing. Applications of quantum computing encompass a wide array of fields from machine learning to chemistry. Quantum Computation can be done through various techniques such as superconducting circuits, cold-atoms, and photonic elements. In this thesis, applications of linear-optical quantum computing will be employed. Simple quantum simulations are utilized to model the behavior of a complex physical system such as a molecular system which in the scope of this work was a benzene molecule. The benzene molecule is modeled optically through an arrangement of connected directionally-unbiased optical triports. The Hamiltonian which governs the energy dynamics of the system is determined for the system in a specific case and then later on a generalized model is derived. The eigenvalues and eigenvectors which represent the energies and states of the system are numerically and analytically determined and compared to an established approximated model of Benzene. By adjusting triport phase angles, the model may be adjusted to closely match the molecular Benzene model.
