--- a/thesis_tex_src/0_Prelim/cv.tex
+++ b/thesis_tex_src/0_Prelim/cv.tex
@@ -1,11 +1,11 @@
-\addcontentsline{toc}{chapter}{Curriculum Vitae}
+\addcontentsline{toc}{chapter}{Thank You}
 
 \thispagestyle{empty}
 
 \begin{center}
-{\LARGE {\bf CURRICULUM VITAE}}\\
+{\LARGE {\bf THANK YOU}}\\
 \vspace{0.5in}
-{\large {\bf Joe Graduate}}
+{\large {\bf Sonam Ghosh}}
 \end{center}
 
-Basically, this needs to be worked out by each individual, however the same format, margins, typeface, and type size must be used as in the rest of the dissertation. 
+
