--- a/thesis_tex_src/0_Prelim/prelim.tex
+++ b/thesis_tex_src/0_Prelim/prelim.tex
@@ -124,18 +124,18 @@
 \cleardoublepage
 
 % List of Abbrevs is NOT optional (Martha Wellman likes all abbrevs listed)
-\chapter*{List of Abbreviations}
+\chapter*{List of Abbreviations }
 \begin{center}
   \begin{tabular}{lll}
     \hspace*{2em} & \hspace*{1in} & \hspace*{4.5in} \\
-    CAD  & \dotfill & Computer-Aided Design \\
-    CO   & \dotfill & Cytochrome Oxidase \\
-    DOG  & \dotfill & Difference Of Gaussian (distributions) \\
-    FWHM & \dotfill & Full-Width at Half Maximum \\
-    LGN  & \dotfill & Lateral Geniculate Nucleus \\
-    ODC  & \dotfill & Ocular Dominance Column \\
+    H.c.  & \dotfill & Hermitian conjugate \\
+    QIP   & \dotfill & Quantum information processing \\
+    LOQC & \dotfill & Linear Optical Quantum Computing \\
     PDF  & \dotfill & Probability Distribution Function \\
     $\mathbb{R}^{2}$  & \dotfill & the Real plane \\
+    $ \mathbb{C}$  & \dotfill & The Complex plane \\
+    $ \mathbb{Z}$ & \dotfill & Real Numbers \\
+    MO & \dotfill & Molecular Orbitals
   \end{tabular}
 \end{center}
 \cleardoublepage
