--- a/thesis_tex_src/3_Conclusion/conclusion.tex
+++ b/thesis_tex_src/3_Conclusion/conclusion.tex
@@ -1,16 +1,12 @@
 \chapter{Conclusions}
 \label{chapter:Conclusions}
 \thispagestyle{myheadings}
-
+In this dissertation novel insight was earned through an application of Hamiltonian-based Photonic Quantum Information Processing. It was evident one can use linear optical devices and form complex characterized structures which can be put together to form physical models that represent atomic molecules in nature. Using this insight offers a new approach to tackling molecular modeling in the fields of Quantum Chemistry and Quantum Computing. A summary of results and future approaches is down below.
 % set this to the location of the figures for this chapter. it may
 % also want to be ../Figures/2_Body/ or something. make sure that
 % it has a trailing directory separator (i.e., '/')!
 \graphicspath{{3_Conclusion/Figures/}}
 
-\section{Summary of the thesis}
-
-Time to get philosophical and wordy.
-
-IMPORTANT: In the references at the end of thesis, all journal names must be
-spelled out in full, except for standard abbreviations like IEEE, ACM, SPIE,
-INFOCOM, ...
+\section{Summary of Work and future directions}
+Using a network of directionally-unbiased optical multiports, we are able to construct a characterizable system that mimics one that of a simple molecule which in this case was Benzene. Even though the results didn't have the accurate spacing that is synonamous to the Huckel Model, it provided the same symmetry and behaviour and thats an important feature to get out of this. Apart from that, insight was obtained in the behaviour of photons in a closed network of optical multiports such as its periodic nature, how it moves in the system, and for quantum walks. With additional pertubation and correction. one could achieve even closer modeling of the molecule. Given that the Huckel model is also just a simple approximation of aromatic hydrocarbons and ignores certain atomic interactions, it is interesting to note how our system of optical elements can produce similar simple molecular behaviour modeling. \newline
+Further research can be made into creating more complex multiport networks. One may be able to study the entangled quantum walk dynamics on complex multiport models which are similar to graphical models. Even using the existing benzene molecule, one may be able to create other benzene-like chemical compounds or benzene-dependent molecules and characterize those. Eventually, it would be feasible to scale down these systems into an optical chip system and do more complex information processing and modeling. The biggest constraint would be the experimental realization of this work which requires additional designing, more parameters, and extensive testing. Nevertheless, multiport networks are efficient and versatile and offer a new approach to tackling quantum chemistry and quantum computing systems. I leave research for more complex networks and other means of mathematics as a topic for future researchers. 
