--- a/thesis_tex_src/thesis.bib
+++ b/thesis_tex_src/thesis.bib
@@ -21,3 +21,324 @@
   keywords = 	"spatio-temporal segmentation",
   annote =	"first paper showing object tunnels on natural images"
 }
+
+@article{PLMS:PLMS0230,
+author = {Turing, A. M.},
+title = {On Computable Numbers, with an Application to the Entscheidungsproblem},
+journal = {Proceedings of the London Mathematical Society},
+volume = {s2-42},
+number = {1},
+publisher = {Oxford University Press},
+issn = {1460-244X},
+url = {http://dx.doi.org/10.1112/plms/s2-42.1.230},
+doi = {10.1112/plms/s2-42.1.230},
+pages = {230--265},
+year = {1937},
+}
+
+@article{Feynman1982,
+author="Feynman, Richard P.",
+title="Simulating physics with computers",
+journal="International Journal of Theoretical Physics",
+year="1982",
+month="Jun",
+day="01",
+volume="21",
+number="6",
+pages="467--488",
+issn="1572-9575",
+doi="10.1007/BF02650179",
+url="https://doi.org/10.1007/BF02650179"
+}
+
+@book{Nielsen:2011:QCQ:1972505,
+ author = {Nielsen, Michael A. and Chuang, Isaac L.},
+ title = {Quantum Computation and Quantum Information: 10th Anniversary Edition},
+ year = {2011},
+ isbn = {1107002176, 9781107002173},
+ edition = {10th},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+}
+
+@article {aspuru-guzik_photonic_2012,
+	title = {Photonic quantum simulators},
+	journal = {Nature Physics},
+	volume = {8},
+	year = {2012},
+	note = {n/a},
+	pages = {285{\textendash}291},
+	abstract = {n/a},
+	issn = {1745-2473, 1745-2481},
+	doi = {10.1038/nphys2253},
+	url = {http://www.nature.com/doifinder/10.1038/nphys2253},
+	author = {Aspuru-Guzik, Al{\'a}n and Walther, Philip}
+}
+
+@book{gerry2005introductory,
+  title={Introductory Quantum Optics},
+  author={Gerry, C. and Knight, P.},
+  isbn={9780521527354},
+  lccn={2004051847},
+  url={https://books.google.com/books?id=CgByyoBJJwgC},
+  year={2005},
+  publisher={Cambridge University Press}
+}
+
+@article{RevModPhys.79.135,
+  title = {Linear optical quantum computing with photonic qubits},
+  author = {Kok, Pieter and Munro, W. J. and Nemoto, Kae and Ralph, T. C. and Dowling, Jonathan P. and Milburn, G. J.},
+  journal = {Rev. Mod. Phys.},
+  volume = {79},
+  issue = {1},
+  pages = {135--174},
+  numpages = {0},
+  year = {2007},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.79.135},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.79.135}
+}
+
+@InProceedings{10.1007/3-540-49208-9_36,
+author="Adami, C.
+and Cerf, N. J.",
+editor="Williams, Colin P.",
+title="Quantum Computation with Linear Optics",
+booktitle="Quantum Computing and Quantum Communications",
+year="1999",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="391--401",
+abstract="We present a constructive method to translate small quantum circuits into their optical analogues, using linear components of present-day quantum optics technology only. These optical circuits perform precisely the computation that the quantum circuits are designed for, and can thus be used to test the performance of quantum algorithms. The method relies on the representation of several quantum bits by a single photon, and on the implementation of universal quantum gates using simple optical components (beam splitters, phase shifters, etc.). The optical implementation of Brassard et al.'s teleportation circuit, a non-trivial 3-bit quantum computation, is presented as an illustration.",
+isbn="978-3-540-49208-5"
+}
+
+
+@article{PhysRevA.48.1687,
+  title = {Quantum random walks},
+  author = {Aharonov, Y. and Davidovich, L. and Zagury, N.},
+  journal = {Phys. Rev. A},
+  volume = {48},
+  issue = {2},
+  pages = {1687--1690},
+  numpages = {0},
+  year = {1993},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.48.1687},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.48.1687}
+}
+
+
+@misc{https://open.bu.edu/handle/2144/23564,
+  title = {High-dimensional quantum information processing with linear optics},
+  author = {Fitzpatrick, Casey, Alan},
+  year = {2017},
+  URL = {https://open.bu.edu/handle/2144/23564},
+  publisher = {OpenBU}
+}
+
+
+@article{doi:10.1080/00107151031000110776,
+author = { J   Kempe },
+title = {Quantum random walks: An introductory overview},
+journal = {Contemporary Physics},
+volume = {44},
+number = {4},
+pages = {307-327},
+year  = {2003},
+publisher = {Taylor & Francis},
+doi = {10.1080/00107151031000110776},
+
+URL = { 
+        https://doi.org/10.1080/00107151031000110776
+    
+},
+eprint = { 
+        https://doi.org/10.1080/00107151031000110776
+    
+}
+
+}
+
+@Article{Venegas-Andraca2012,
+author="Venegas-Andraca, Salvador El{\'i}as",
+title="Quantum walks: a comprehensive review",
+journal="Quantum Information Processing",
+year="2012",
+month="Oct",
+day="01",
+volume="11",
+number="5",
+pages="1015--1106",
+abstract="Quantum walks, the quantum mechanical counterpart of classical random walks, is an advanced tool for building quantum algorithms that has been recently shown to constitute a universal model of quantum computation. Quantum walks is now a solid field of research of quantum computation full of exciting open problems for physicists, computer scientists and engineers. In this paper we review theoretical advances on the foundations of both discrete- and continuous-time quantum walks, together with the role that randomness plays in quantum walks, the connections between the mathematical models of coined discrete quantum walks and continuous quantum walks, the quantumness of quantum walks, a summary of papers published on discrete quantum walks and entanglement as well as a succinct review of experimental proposals and realizations of discrete-time quantum walks. Furthermore, we have reviewed several algorithms based on both discrete- and continuous-time quantum walks as well as a most important result: the computational universality of both continuous- and discrete-time quantum walks.",
+issn="1573-1332",
+doi="10.1007/s11128-012-0432-5",
+url="https://doi.org/10.1007/s11128-012-0432-5"
+}
+
+@article {Childs791,
+	author = {Childs, Andrew M. and Gosset, David and Webb, Zak},
+	title = {Universal Computation by Multiparticle Quantum Walk},
+	volume = {339},
+	number = {6121},
+	pages = {791--794},
+	year = {2013},
+	doi = {10.1126/science.1229957},
+	publisher = {American Association for the Advancement of Science},
+	abstract = {A quantum walk is a time-homogeneous quantum-mechanical process on a graph defined by analogy to classical random walk. The quantum walker is a particle that moves from a given vertex to adjacent vertices in quantum superposition. We consider a generalization to interacting systems with more than one walker, such as the Bose-Hubbard model and systems of fermions or distinguishable particles with nearest-neighbor interactions, and show that multiparticle quantum walk is capable of universal quantum computation. Our construction could, in principle, be used as an architecture for building a scalable quantum computer with no need for time-dependent control.},
+	issn = {0036-8075},
+	URL = {http://science.sciencemag.org/content/339/6121/791},
+	eprint = {http://science.sciencemag.org/content/339/6121/791.full.pdf},
+	journal = {Science}
+}
+
+@article{FELDMAN2004277,
+title = "Scattering theory and discrete-time quantum walks",
+journal = "Physics Letters A",
+volume = "324",
+number = "4",
+pages = "277 - 281",
+year = "2004",
+issn = "0375-9601",
+doi = "https://doi.org/10.1016/j.physleta.2004.03.005",
+url = "http://www.sciencedirect.com/science/article/pii/S0375960104003275",
+author = "Edgar Feldman and Mark Hillery",
+keywords = "Quantum walks"
+}
+
+
+@article{doi:10.1093/carcin/bgr297,
+author = {McHale, Cliona M. and Zhang, Luoping and Smith, Martyn T.},
+title = {Current understanding of the mechanism of benzene-induced leukemia in humans: implications for risk assessment},
+journal = {Carcinogenesis},
+volume = {33},
+number = {2},
+pages = {240-252},
+year = {2012},
+doi = {10.1093/carcin/bgr297},
+URL = { + http://dx.doi.org/10.1093/carcin/bgr297},
+eprint = {/oup/backfile/content_public/journal/carcin/33/2/10.1093_carcin_bgr297/2/bgr297.pdf}
+}
+
+@article{article,
+author = {Ravindran, Jayaraj and Prasad, Sahdeo and Aggarwal, Bharat},
+year = {2009},
+month = {08},
+pages = {495-510},
+title = {Curcumin and Cancer Cells: How Many Ways Can Curry Kill Tumor Cells Selectively?},
+volume = {11},
+booktitle = {The AAPS journal}
+}
+
+@article{Blatt:12,
+author = {Rainer Blatt},
+booktitle = {Research in Optical Sciences},
+journal = {Research in Optical Sciences},
+keywords = {General},
+pages = {QM2A.1},
+publisher = {Optical Society of America},
+title = {Quantum Information Processing and Quantum Simulations with Trapped Ions},
+year = {2012},
+url = {http://www.osapublishing.org/abstract.cfm?URI=QIM-2012-QM2A.1},
+doi = {10.1364/QIM.2012.QM2A.1},
+abstract = {The use of trapped ions for quantum information processing is reviewed. Quantum simulations employ well controlled quantum systems to make predictions on another quantum system under investigation. With trapped ions quantum relativistic effects and spin systems are simulated.},
+}
+
+@article{RevModPhys.80.1061,
+  title = {Colloquium},
+  author = {Das, Arnab and Chakrabarti, Bikas K.},
+  journal = {Rev. Mod. Phys.},
+  volume = {80},
+  issue = {3},
+  pages = {1061--1081},
+  numpages = {0},
+  year = {2008},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.80.1061},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.80.1061}
+}
+
+@Article{Paraoanu2014,
+author="Paraoanu, G. S.",
+title="Recent Progress in Quantum Simulation Using Superconducting Circuits",
+journal="Journal of Low Temperature Physics",
+year="2014",
+month="Jun",
+day="01",
+volume="175",
+number="5",
+pages="633--654",
+abstract="Quantum systems are notoriously difficult to simulate with classical means. Recently, the idea of using another quantum system---which is experimentally more controllable---as a simulator for the original problem has gained significant momentum. Amongst the experimental platforms studied as quantum simulators, superconducting qubits are one of the most promising, due to relative straightforward scalability, easy design, and integration with standard electronics. Here I review the recent state-of-the art in the field and the prospects for simulating systems ranging from relativistic quantum fields to quantum many-body systems.",
+issn="1573-7357",
+doi="10.1007/s10909-014-1175-8",
+url="https://doi.org/10.1007/s10909-014-1175-8"
+}
+
+@article{PhysRevA.95.052338,
+  title = {Experimental implementation of a quantum walk on a circle with single photons},
+  author = {Bian, Zhi-Hao and Li, Jian and Zhan, Xiang and Twamley, Jason and Xue, Peng},
+  journal = {Phys. Rev. A},
+  volume = {95},
+  issue = {5},
+  pages = {052338},
+  numpages = {7},
+  year = {2017},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.95.052338},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.95.052338}
+}
+
+@article{PhysRevLett.104.153602,
+  title = {Discrete Single-Photon Quantum Walks with Tunable Decoherence},
+  author = {Broome, M. A. and Fedrizzi, A. and Lanyon, B. P. and Kassal, I. and Aspuru-Guzik, A. and White, A. G.},
+  journal = {Phys. Rev. Lett.},
+  volume = {104},
+  issue = {15},
+  pages = {153602},
+  numpages = {4},
+  year = {2010},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.104.153602},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.104.153602}
+}
+
+@article{PhysRevLett.104.050502,
+  title = {Photons Walking the Line: A Quantum Walk with Adjustable Coin Operations},
+  author = {Schreiber, A. and Cassemiro, K. N. and Poto\ifmmode \check{c}\else \v{c}\fi{}ek, V. and G\'abris, A. and Mosley, P. J. and Andersson, E. and Jex, I. and Silberhorn, Ch.},
+  journal = {Phys. Rev. Lett.},
+  volume = {104},
+  issue = {5},
+  pages = {050502},
+  numpages = {4},
+  year = {2010},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.104.050502},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.104.050502}
+}
+
+
+@article{PhysRevA.93.043845,
+  title = {Group transformations and entangled-state quantum gates with directionally unbiased linear-optical multiports},
+  author = {Simon, David S. and Fitzpatrick, Casey A. and Sergienko, Alexander V.},
+  journal = {Phys. Rev. A},
+  volume = {93},
+  issue = {4},
+  pages = {043845},
+  numpages = {9},
+  year = {2016},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.93.043845},
+  url = {https://link.aps.org/doi/10.1103/PhysRevA.93.043845}
+}
+
+
+
+
+
