--- a/thesis_tex_src/0_Prelim/ack.tex
+++ b/thesis_tex_src/0_Prelim/ack.tex
@@ -1,26 +1,8 @@
-Here go all your acknowledgments. You know, your advisor, funding agency, lab
-mates, etc., and of course your family.
-
-As for me, I would like to thank Jonathan Polimeni for cleaning up old LaTeX
-style files and templates so that Engineering students would not have to suffer
-typesetting dissertations in MS Word. Also, I would like to thank IDS/ISS
-group (ECE) and CV/CNS lab graduates for their contributions and tweaks to this
-scheme over the years (after many frustrations when preparing their final
-document for BU library). In particular, I would like to thank Limor Martin who
-has helped with the transition to PDF-only dissertation format (no more printing
-hardcopies -- hooray !!!)
-
-The stylistic and aesthetic conventions implemented in this LaTeX
-thesis/dissertation format would not have been possible without the help from
-Brendan McDermot of Mugar library and Martha Wellman of CAS.
-
-Finally, credit is due to Stephen Gildea for the MIT style file off which this
-current version is based, and Paolo Gaudiano for porting the MIT style to one
-compatible with BU requirements.
+I would like to thank Alexander Sergienko, David Simon, and Shuto Osawa for guiding me through the entire journey of Quantum Computing from the theoretical to the experimental and for providing me this fulfilling opportunity. I would like to thank Professor John Butler of the BU Physics Department for his excellent Modern Physics course that inspired to go down the road of pursuing a deeper background in Physics which lead to obtaining a minor in Physics. I would like to thank my AP Physics B high school teacher Richard Newton for channeling and generating an enormous passion for Physics and spurring me towards Engineering during my senior year in High School. I would like to thank my parents and my sister for being there for support and encouragement every step of the way. Lastly, I want to thank my friends from high schools and BU for trying their best to keeping me sane and entertained through this journey. Quick shoutout to my fellow physics partner-in-crime and friend from high school, Nick Russo for enlightening late night science discussion!
 
 \vskip 1in
 
 \noindent
-Janusz Konrad\\
-Professor\\
-ECE Department
+Sonam K. Ghosh\\
+Boston, MA\\
+April, 2018
